data stream to java collection & test